tests/types/errors/null_widening_struct.mochi
// MEP-10 A2: `none` is `option[any]` and does not flow into a non-option
// struct slot. Use `Point?` if you need a nullable struct binding.
type Point {
  x: int
  y: int
}
let p: Point = none
